debug: Fix a11y features regarding form labels and contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -392,6 +392,7 @@ nav h1 a:hover {
 	margin: 0;
 	border: 0;
 	padding: 0;
+	background-color: black;
 }
 fieldset {
 	border-radius: 8px 0 0 0;
